@@ -1,3 +1,6 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2004/07/21 03:54:24 xtraeme Exp $
+@comment $NetBSD: PLIST,v 1.2 2004/09/21 10:16:05 xtraeme Exp $
 man/man8/clamsmtpd.8
+man/man5/clamsmtpd.conf.5
 sbin/clamsmtpd
+share/examples/clamsmtp/clamsmtpd.conf
+@dirrm share/examples/clamsmtp
