@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.5 2004/08/30 06:52:30 xtraeme Exp $
+$NetBSD: distinfo,v 1.6 2004/09/21 10:16:05 xtraeme Exp $
 
-SHA1 (clamsmtp-0.7.tar.gz) = a44bb901cd475234124060af91b7d6b6c64aebea
-Size (clamsmtp-0.7.tar.gz) = 121807 bytes
+SHA1 (clamsmtp-0.8.tar.gz) = 89a3c1728702236e6a8654530cbf6bd86a462354
+Size (clamsmtp-0.8.tar.gz) = 128783 bytes
